// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CartDrawer Component > should render cart items and footer correctly 1`] = `
<div>
  <div
    animate="[object Object]"
    class="fixed inset-0 bg-black/50 z-50 backdrop-blur-sm"
    exit="[object Object]"
    initial="[object Object]"
  />
  <div
    animate="[object Object]"
    class="fixed bottom-0 left-0 right-0 sm:top-0 sm:right-0 sm:left-auto sm:w-96 sm:h-full bg-white z-50 rounded-t-2xl sm:rounded-none sm:rounded-l-2xl shadow-xl flex flex-col max-h-[90vh] sm:max-h-screen"
    exit="[object Object]"
    initial="[object Object]"
    transition="[object Object]"
  >
    <div
      class="p-4 border-b border-coffee-100 flex items-center justify-between bg-coffee-50/50"
    >
      <h2
        class="text-lg font-bold text-coffee-900 flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-shopping-bag"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 10a4 4 0 0 1-8 0"
          />
          <path
            d="M3.103 6.034h17.794"
          />
          <path
            d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z"
          />
        </svg>
         Your Order
      </h2>
      <button
        class="p-2 hover:bg-coffee-100 rounded-full text-coffee-500 transition-colors"
        data-testid="close-cart-btn"
      >
        ✕
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto p-4 space-y-4"
    >
      <div
        class="flex flex-col border-b border-coffee-50 pb-4 last:border-0"
        data-testid="cart-item-c1"
      >
        <div
          class="flex justify-between items-start mb-2"
        >
          <div
            class="flex-1"
          >
            <h4
              class="font-medium text-coffee-800"
            >
              Kopi Susu
            </h4>
            <div
              class="text-sm font-bold text-coffee-700 mt-1"
            >
              Rp
               
              15,000
            </div>
          </div>
          <div
            class="flex items-center space-x-2 bg-coffee-50 rounded-lg p-1"
          >
            <button
              class="p-1 hover:bg-white rounded shadow-sm text-coffee-600 transition-colors"
              data-testid="minus-btn-c1"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-minus"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
              </svg>
            </button>
            <span
              class="text-sm font-bold w-4 text-center text-coffee-800"
              data-testid="qty-c1"
            >
              2
            </span>
            <button
              class="p-1 hover:bg-white rounded shadow-sm text-coffee-600 transition-colors"
              data-testid="plus-btn-c1"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col border-b border-coffee-50 pb-4 last:border-0"
        data-testid="cart-item-c2"
      >
        <div
          class="flex justify-between items-start mb-2"
        >
          <div
            class="flex-1"
          >
            <h4
              class="font-medium text-coffee-800"
            >
              Mie Goreng
            </h4>
            <div
              class="text-xs text-coffee-500 mt-1 space-y-0.5"
            >
              <div
                class="flex justify-between w-full max-w-[200px]"
              >
                <span>
                  +
                   
                  Pedas
                </span>
                <span>
                  +Rp
                   
                  2,000
                </span>
              </div>
              <div
                class="flex justify-between w-full max-w-[200px]"
              >
                <span>
                  +
                   
                  Telur
                </span>
                <span>
                  +Rp
                   
                  3,000
                </span>
              </div>
            </div>
            <div
              class="text-sm font-bold text-coffee-700 mt-1"
            >
              Rp
               
              25,000
            </div>
          </div>
          <div
            class="flex items-center space-x-2 bg-coffee-50 rounded-lg p-1"
          >
            <button
              class="p-1 hover:bg-white rounded shadow-sm text-coffee-600 transition-colors"
              data-testid="minus-btn-c2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-minus"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
              </svg>
            </button>
            <span
              class="text-sm font-bold w-4 text-center text-coffee-800"
              data-testid="qty-c2"
            >
              1
            </span>
            <button
              class="p-1 hover:bg-white rounded shadow-sm text-coffee-600 transition-colors"
              data-testid="plus-btn-c2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="p-4 border-t border-coffee-100 bg-coffee-50/50"
    >
      <div
        class="flex justify-between items-center mb-4"
      >
        <span
          class="text-coffee-600 font-medium"
        >
          Total
        </span>
        <span
          class="text-xl font-bold text-coffee-900"
        >
          Rp 
          55,000
        </span>
      </div>
      <button
        class="w-full bg-coffee-900 text-white py-3 rounded-xl font-bold shadow-lg hover:bg-coffee-800 transition-colors flex justify-between px-6"
        data-testid="checkout-btn"
      >
        <span>
          Checkout
        </span>
        <span>
          →
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`CartDrawer Component > should render empty state when cart is empty 1`] = `
<div>
  <div
    animate="[object Object]"
    class="fixed inset-0 bg-black/50 z-50 backdrop-blur-sm"
    exit="[object Object]"
    initial="[object Object]"
  />
  <div
    animate="[object Object]"
    class="fixed bottom-0 left-0 right-0 sm:top-0 sm:right-0 sm:left-auto sm:w-96 sm:h-full bg-white z-50 rounded-t-2xl sm:rounded-none sm:rounded-l-2xl shadow-xl flex flex-col max-h-[90vh] sm:max-h-screen"
    exit="[object Object]"
    initial="[object Object]"
    transition="[object Object]"
  >
    <div
      class="p-4 border-b border-coffee-100 flex items-center justify-between bg-coffee-50/50"
    >
      <h2
        class="text-lg font-bold text-coffee-900 flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-shopping-bag"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 10a4 4 0 0 1-8 0"
          />
          <path
            d="M3.103 6.034h17.794"
          />
          <path
            d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z"
          />
        </svg>
         Your Order
      </h2>
      <button
        class="p-2 hover:bg-coffee-100 rounded-full text-coffee-500 transition-colors"
        data-testid="close-cart-btn"
      >
        ✕
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto p-4 space-y-4"
    >
      <div
        class="flex flex-col items-center justify-center h-full text-coffee-400 space-y-4"
        data-testid="empty-cart-msg"
      >
        <div
          class="w-20 h-20 bg-coffee-50 rounded-full flex items-center justify-center text-4xl shadow-inner"
        >
          ☕
        </div>
        <p
          class="font-medium"
        >
          Your cart is empty
        </p>
      </div>
    </div>
  </div>
</div>
`;
